# stock-dash-e2e

./: .env.example  .gitignore  LICENSE  README.md  app.yaml  pyproject.toml  requirements.txt
app/: app.yaml  requirements.txt  streamlit_app.py
config/: watchlist.yml
data/: demo_gold.csv
databricks/notebooks/: 01_bronze_ingestion.py  02_silver_transformations.py  03_gold_aggregations.py  04_demo_microbatch_runner.py
docs/: architecture.md  research.md
src/stock_dash_etl/: __init__.py  alphavantage.py  bronze.py  config.py  gold.py  metrics.py  schemas.py  silver.py
src/stock_dash_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
