[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-dash-etl"
version = "0.1.0"
description = "Databricks Free Edition ETL pipeline starter for Alpha Vantage stock data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "delta-spark==3.2.1",
  "pandas==2.2.3",
  "plotly==6.0.1",
  "pyspark==3.5.5",
  "python-dotenv==1.0.1",
  "PyYAML==6.0.2",
  "requests==2.32.3",
  "streamlit==1.43.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
